add buttons and code format

--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -19,6 +19,9 @@
     <div class="flex items-end px-4 py-1 justify-end">
       <%= link_to '+ Complete and Create new follow-up', copy_consultation_path(@consultation), class: 'mt-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
     </div>
+    <div class="flex items-end px-4 py-1 justify-end">
+      <%= link_to '+ Add a Prescription', new_contact_prescription_path(@contact), class: 'inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
+    </div>
     <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
       <div class="w-full">
         <div class="flex md:flex-row flex-col justify-between">
