--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -16,7 +16,6 @@
     <div class="mt-3 lg:mt-0">
       <%= link_to 'Edit Contact', edit_contact_path(@contact), class: 'inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
     </div>
-
   </div>
   <div class="px-4 py-5 sm:p-0">
     <dl>
@@ -268,4 +267,44 @@
       </div>
     </div>
   <% end %>
+</div>
+<div class="mt-4 text-5xl font-semibold border-b-2 ">Prescriptions</div>
+<div class="mt-4 flex flex-wrap">
+  <% @contact.prescriptions.where.not(id: nil).order(:created_at).reverse.map do |prescription| %>
+    <div class="md:w-1/3 w-full p-2">
+      <div class="bg-white shadow overflow-hidden  sm:rounded-lg mt-4 p-4 h-full">
+        <div class="mt-4 text-3xl font-semibold px-2 -py-1 rounded shadow bg-gray-200">
+          <%= prescription.delivery_status.titleize %>
+        </div>
+        <div class="mb-2">
+          Prescribed <%= time_ago_in_words(prescription.created_at) %> ago
+        </div>
+        <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
+          <dt class="text-sm leading-5 font-medium text-gray-500">
+            Source
+          </dt>
+          <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+            <%= prescription.source %>
+          </dd>
+        </div>
+        <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
+          <dt class="text-sm leading-5 font-medium text-gray-500">
+            Scheme
+          </dt>
+          <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+            <%= prescription.scheme %>
+          </dd>
+        </div>
+        <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
+          <dt class="text-sm leading-5 font-medium text-gray-500">
+            Supplier
+          </dt>
+          <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+            <%= prescription.supplier %>
+          </dd>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
 </div>
