--- a/app/views/contacts/search.html.erb
+++ b/app/views/contacts/search.html.erb
@@ -5,11 +5,7 @@
 <% end %>
 
 <section>
-  <div>
-    <%= link_to "Show Calls", contacts_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-    <%= link_to "Show Summary", summary_contacts_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-    <%= link_to "Search", search_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-gray-700 rounded text-white' %>
-  </div>
+  <%= render 'layouts/breadcrumbs' %>
 </section>
 
 <div class="mt-4">
