--- a/app/views/contacts/summary.html.erb
+++ b/app/views/contacts/summary.html.erb
@@ -6,11 +6,7 @@
 
 
 <section>
-  <div>
-    <%= link_to "Show Calls", contacts_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-    <%= link_to "Show Summary", summary_contacts_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-gray-700 rounded text-white' %>
-    <%= link_to "Search", search_path, class: 'mt-2 mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-  </div>
+  <%= render 'layouts/breadcrumbs' %>
   <!--    <h1 class="text-xl font-bold">Generate Reports</h1>-->
 
   <!--    <div class="flex">-->
