--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -1,4 +1,5 @@
 <section>
+  <%= render 'layouts/breadcrumbs' %>
   <div class="flex">
     <div class="font-semibold mt-4 text-3xl">
       Summary
