minor style fixes

--- a/app/views/layouts/_breadcrumbs.html.erb
+++ b/app/views/layouts/_breadcrumbs.html.erb
@@ -8,7 +8,7 @@
 %>
 <div>
   <%= link_to "Show Calls", contacts_path, class: is_current_path_classes(contacts_path) %>
-  <%= link_to "Show Summary", summary_contacts_path, class: is_current_path_classes(summary_contacts_path) %>
-  <%= link_to "Search", search_path, class: is_current_path_classes(search_path) %>
+  <%= link_to "Show Summary", root_path, class: is_current_path_classes(root_path) %>
   <%= link_to "Prescriptions", prescriptions_path, class: is_current_path_classes(prescriptions_path) %>
+  <%= link_to "Search", search_path, class: is_current_path_classes(search_path) %>
 </div>
