--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -110,110 +110,7 @@
           <span><%= simple_format(@contact.description) %></span>
         </dd>
       </div>
-      <!--      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5 hidden">-->
-      <!--        <dt class="text-sm leading-5 font-medium text-gray-500">-->
-      <!--          Medical Requirements-->
-      <!--        </dt>-->
-      <!--        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">-->
-      <!--          <ul>-->
-      <%# @contact.medical_reqs.each do |medical_req| %>
-      <%# if not (medical_req.fullfilled? or medical_req.not_able_type?) %>
-      <!--                <li class="mt-2	block p-2 flex items-center justify-between border rounded">-->
-      <!--                  <div>-->
-      <!--                    <p>-->
-      <!--                      Needs <%#= medical_req.requirement_type.to_s.titleize %> Medicines-->
-      <!--                    </p>-->
-      <!--                    <p class="text-gray-600">-->
-      <!--                      Other Comments: <%#= medical_req.other_needs %>-->
-      <!--                    </p>-->
-      <!--                  </div>-->
-      <!--                  <div>-->
-      <!--                                      <span class="text-xs">-->
-      <!--                                          <%#= time_ago_in_words(medical_req.created_at) %> ago-->
-      <!--                                      </span>-->
-      <%# if current_user.admin? or current_user.district_admin? %>
-      <%#= link_to 'Cancel', contact_medical_req_path(id: medical_req.id, contact_id: @contact.id), method: :delete, class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%# end %>
-      <%# if current_user.panchayat_admin? %>
-      <%#= link_to 'Complete', fullfill_contact_medical_req_path(id: medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%#= link_to 'Undeliverable', not_able_contact_medical_req_path(not_able_type: :undeliverable, id: medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%#= link_to 'Other Issues', not_able_contact_medical_req_path(not_able_type: :other_reasons, id: medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%# end %>
-      <!--                  </div>-->
-      <!--                </li>-->
-      <%# end %>
-      <%# end %>
-      <!--          </ul>-->
-      <%# if not current_user.panchayat_admin? %>
-      <!--            <div class="mt-4">-->
-      <!--              <hr/>-->
-      <!--              <h4 class="mt-4 text-gray-600">Add Medical Requirements</h4>-->
-      <%#= render 'medical_reqs/form' %>
-      <!--            </div>-->
-      <%# end %>
-      <!--        </dd>-->
-      <!--      </div>-->
-      <!--      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">-->
-      <!--        <dt class="text-sm leading-5 font-medium text-gray-500">-->
-      <!--          Non Medical Requirements-->
-      <!--        </dt>-->
-      <!--        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">-->
-      <!--          <ul>-->
-      <%# @contact.non_medical_reqs.each do |non_medical_req| %>
-      <%# if not (non_medical_req.fullfilled? or non_medical_req.not_able_type?) %>
-      <!--                <li class="mt-2	block p-2 flex items-center justify-between border rounded">-->
-      <!--                  <div>-->
-      <!--                    <p>-->
-      <!--                      Needs <%#= non_medical_req.requirement_type.to_s.titleize %>-->
-      <!--                    </p>-->
-      <!--                    <p class="text-gray-600">-->
-      <!--                      Other Comments: <%#= non_medical_req.other_needs %>-->
-      <!--                    </p>-->
-      <!--                  </div>-->
-      <!--                  <div>-->
-      <!--                                      <span class="text-xs">-->
-      <!--                                          <%#= time_ago_in_words(non_medical_req.created_at) %> ago-->
-      <!--                                      </span>-->
-      <%# if current_user.admin? or current_user.district_admin? %>
-      <%#= link_to 'Cancel', contact_non_medical_req_path(id: non_medical_req.id, contact_id: @contact.id), method: :delete, class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%# end %>
-      <%# if current_user.panchayat_admin? %>
-      <%#= link_to 'Complete', fullfill_contact_non_medical_req_path(id: non_medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%#= link_to 'Delivery Issue', not_able_contact_non_medical_req_path(not_able_type: :undeliverable, id: non_medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%#= link_to 'Other Issues', not_able_contact_non_medical_req_path(not_able_type: :other_reasons, id: non_medical_req.id, contact_id: @contact.id), class: 'inline-flex ml-2 items-center px-2 py-1 border border-transparent text-xs leading-4 font-medium rounded-md text-red-700 bg-red-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-      <%# end %>
-      <!--                  </div>-->
-      <!--                </li>-->
-      <%# end %>
-      <%# end %>
-      <!--          </ul>-->
-      <%# if not current_user.panchayat_admin? %>
-      <!--            <div class="mt-4">-->
-      <!--              <hr/>-->
-      <!--              <h4 class="mt-4 text-gray-600">Add new Non Medical Requirements</h4>-->
-      <%#= render 'non_medical_reqs/form' %>
-      <!--            </div>-->
-      <%# end %>
-      <!--        </dd>-->
-      <!--      </div>-->
-      <!--      <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">-->
-      <!--        <dt class="text-sm leading-5 font-medium text-gray-500">-->
-      <!--          Feedback-->
-      <!--        </dt>-->
-      <!--        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">-->
-      <%# if not current_user.panchayat_admin? %>
-      <%#= simple_form_for @contact, defaults: { input_html: { class: 'form-input mt-1 font-sans' }, wrapper_html: { class: 'flex flex-col my-4' }, label_html: { class: 'mb-1' } } do |f| %>
-      <!--              <div class="">-->
-      <%#= f.input :feedback, label: 'Feedback Comments if Any' %>
-      <%#= f.button :submit, 'Save', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
-      <!--              </div>-->
-      <%# end %>
-      <%# else %>
-      <%#= @contact.feedback %>
-      <%# end %>
-      <!--        </dd>-->
-      <!--      </div>-->
-      <!--    </dl>-->
+    </dl>
   </div>
 </div>
 <div class="mt-4 text-5xl font-semibold border-b-2 ">Consultation History</div>
@@ -269,14 +166,17 @@
   <% end %>
 </div>
 <div class="mt-4 text-5xl font-semibold border-b-2 ">Prescriptions</div>
-<div class="mt-4 flex flex-wrap">
+<div class="mt-4 pl-2">
+  <%= link_to '+ Add a Prescription', new_contact_prescription_path(@contact), class: 'inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
+</div>
+<div class="flex flex-wrap">
   <% @contact.prescriptions.where.not(id: nil).order(:created_at).reverse.map do |prescription| %>
     <div class="md:w-1/3 w-full p-2">
       <div class="bg-white shadow overflow-hidden  sm:rounded-lg mt-4 p-4 h-full">
-        <div class="mt-4 text-3xl font-semibold px-2 -py-1 rounded shadow bg-gray-200">
+        <div class="mt-4 text-3xl font-semibold px-2 -py-1 rounded shadow bg-<%= prescription.color %>-200">
           <%= prescription.delivery_status.titleize %>
         </div>
-        <div class="mb-2">
+        <div class="my-2">
           Prescribed <%= time_ago_in_words(prescription.created_at) %> ago
         </div>
         <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:py-5">
@@ -303,8 +203,10 @@
             <%= prescription.supplier %>
           </dd>
         </div>
+        <div>
+          <%= link_to 'View Prescription', prescription_path(prescription), class: 'hover:text-white hover:bg-gray-600 inline-flex items-center px-3 py-2 rounded-md text-sm font-medium leading-5 bg-gray-100 text-gray-800' %>
+        </div>
       </div>
     </div>
   <% end %>
-
 </div>
