--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -1,14 +1,13 @@
-
-
-<div class="bg-white shadow overflow-hidden  sm:rounded-lg max-w-3xl mx-auto">
-  <div class="flex items-end px-4 py-1 justify-end">
-    <%= link_to 'Update Prescription', edit_prescription_path(@prescription), class: 'inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-  </div>
+<div class="flex items-end py-1 mt-4 justify-end max-w-3xl mx-auto">
+  <%= link_to 'View Contact', contact_path(@prescription.contact), class: 'mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
+  <%= link_to 'Update Prescription', edit_prescription_path(@prescription), class: 'inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
+</div>
+<div class="mt-4 bg-white shadow overflow-hidden  sm:rounded-lg max-w-3xl mx-auto">
   <div class="px-4 py-3 border-b border-gray-200 sm:px-6 flex justify-between items-center">
 
     <h3 class="text-3xl font-semibold  leading-6 text-gray-900">
       Prescription </h3>
-    <div class=" text-3xl font-semibold px-2 -py-1 rounded shadow bg-yellow-200">
+    <div class=" text-3xl font-semibold px-2 -py-1 rounded shadow bg-<%= @prescription.color %>-200">
       <%= @prescription.delivery_status.titleize %>
     </div>
   </div>
