--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -60,15 +60,45 @@
           <span class="text-sm"><%= @prescription.created_at.strftime("%m/%d/%Y at %I:%M%p") %></span>
         </p>
       </div>
-      <div class="sm:col-span-2">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Pescription
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900">
-          JSON
-        </dd>
-      </div>
     </dl>
+    <div class="mt-4">
+      <div class="flex flex-col">
+        <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
+          <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
+            <table class="min-w-full">
+              <thead>
+              <tr>
+                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                  Medicine
+                </th>
+                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                  Dosage
+                </th>
+                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                  Days
+                </th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @prescription.medicines.each do |m| %>
+                <tr class="bg-white">
+                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900">
+                    <%= m['medicine'] %>
+                  </td>
+                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500">
+                    <%= m['dosage'] %>
+                  </td>
+                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500">
+                    <%= m['days'] %>
+                  </td>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="flex justify-between mt-4">
       <div class="">
         <dt class="text-sm leading-5 font-medium text-gray-500">
