Fix an issue with prescription

--- a/app/javascript/css/application.css
+++ b/app/javascript/css/application.css
@@ -1,6 +1,7 @@
 /* app/javascript/css/application.css */
 /*! purgecss start ignore */
 @import "choices.js/public/assets/styles/choices.css";
+@import "@coronasafe/prescription-builder/src/index.css";
 /*! purgecss end ignore */
 
 /* purgecss start ignore */
