--- a/app/views/prescriptions/new.html.erb
+++ b/app/views/prescriptions/new.html.erb
@@ -15,13 +15,16 @@
         <%= f.error_notification %>
         <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
         <%= f.input :source, input_html: { class: 'form-select' }, required: true %>
-        <%= f.input :scheme, label: 'Scheme (optional)' %>
+        <%= f.input :scheme, input_html: { class: 'form-select' }, label: 'Scheme (optional)' %>
         <%= f.input :supplier, label: 'Supplier (optional)' %>
       </section>
       <div id="react-root"></div>
+      <div class="mt-8 max-w-lg">
+        <%= f.input :remarks, label: 'Remarks (optional)' %>
+      </div>
       <span class="inline-flex rounded-md shadow-sm">
           <%= f.button :submit, 'Create Prescription', class: 'mt-4 inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-gray-900 hover:bg-gray-800 focus:outline-none focus:border-gray-700 focus:shadow-outline-indigo active:bg-gray-700 transition ease-in-out duration-150' %>
-        </span>
+      </span>
     <% end %>
   </div>
 </div>
