--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -48,10 +48,10 @@
                 <%= prescription.source.titleize %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                <%= prescription.scheme.titleize %>
+                <%= prescription.scheme&.titleize %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-                <%= prescription.supplier.titleize %>
+                <%= prescription.supplier&.titleize %>
               </td>
               <td class="whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 ">
                 <span class="px-4 rounded-lg py-2 font-semibold text-gray-500 bg-<%= prescription.color %>-200">
