--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -12,15 +12,15 @@
     </div>
   </div>
   <div class="px-4 py-5 sm:px-6">
-    <dl class="grid grid-cols-1 col-gap-4 row-gap-8 sm:grid-cols-3 ">
-      <div class="sm:col-span-1">
+    <dl class="flex flex-row flex-wrap">
+      <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Reg No:
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
           EKM<%= @prescription.contact.id %>        </dd>
       </div>
-      <div class="sm:col-span-1">
+      <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Name
         </dt>
@@ -28,7 +28,7 @@
           <%= @prescription.contact.name %>
         </dd>
       </div>
-      <div class="sm:col-span-1">
+      <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Source
         </dt>
@@ -37,15 +37,15 @@
         </dd>
       </div>
 
-      <div class="sm:col-span-1">
+      <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Age
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
-          <%= @prescription.contact.dob %>
+          <%= @prescription.contact&.age_from_dob %> Years
         </dd>
       </div>
-      <div class="sm:col-span-1">
+      <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Gender
         </dt>
@@ -53,7 +53,7 @@
           <%= @prescription.contact.gender %>
         </dd>
       </div>
-      <div class="sm:col-span-2">
+      <div class="sm:col-span-2 mt-4">
         <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
           Prescription was created by
           <span class="font-bold"><%= @prescription.creator.name %></span> on
@@ -61,46 +61,27 @@
         </p>
       </div>
     </dl>
-    <div class="mt-4">
-      <div class="flex flex-col">
-        <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
-          <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
-            <table class="min-w-full">
-              <thead>
-              <tr>
-                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                  Medicine
-                </th>
-                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                  Dosage
-                </th>
-                <th class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                  Days
-                </th>
-              </tr>
-              </thead>
-              <tbody>
-              <% @prescription.medicines.each do |m| %>
-                <tr class="bg-white">
-                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900">
-                    <%= m['medicine'] %>
-                  </td>
-                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500">
-                    <%= m['dosage'] %>
-                  </td>
-                  <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500">
-                    <%= m['days'] %>
-                  </td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
+    <%= render 'show_medicines', medicines: @prescription.medicines %>
+    <div class="flex justify-between">
+      <div class="sm:col-span-2 mt-4 w-1/3">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Remarks
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <%= @prescription.remarks %>
+        </dd>
+      </div>
+      <div class="sm:col-span-2 mt-4 w-1/3">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Comments
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <%= @prescription.comments %>
+        </dd>
       </div>
     </div>
     <div class="flex justify-between mt-4">
-      <div class="">
+      <div class="w-1/3">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Scheme
         </dt>
@@ -108,7 +89,7 @@
           <%= @prescription.scheme %>
         </dd>
       </div>
-      <div class="">
+      <div class="w-1/3">
         <dt class="text-sm leading-5 font-medium text-gray-500">
           Supplier
         </dt>
