--- a/app/views/prescriptions/print.html.erb
+++ b/app/views/prescriptions/print.html.erb
@@ -1,16 +1,11 @@
-<div class="flex items-end py-1 mt-4 justify-end max-w-3xl mx-auto">
-  <%= link_to 'View Contact', contact_path(@prescription.contact), class: 'mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-  <%= link_to 'Update Prescription', edit_prescription_path(@prescription), class: 'mr-2 inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-  <%= link_to 'Print', prescription_print_path(@prescription), class: 'inline-flex text-bold items-center px-4 py-2 rounded-md text-sm font-medium  shadow leading-5 bg-white rounded text-gray-800' %>
-</div>
+<% @skip_header = true %>
 <div class="mt-4 bg-white shadow overflow-hidden  sm:rounded-lg max-w-3xl mx-auto">
-  <div class="px-4 py-3 border-b border-gray-200 sm:px-6 flex justify-between items-center">
-
-    <h3 class="text-3xl font-semibold  leading-6 text-gray-900">
-      Prescription </h3>
-    <div class=" text-3xl font-semibold px-2 -py-1 rounded shadow bg-<%= @prescription.color %>-200">
-      <%= @prescription.delivery_status.titleize %>
-    </div>
+  <div class="px-4 py-3 border-b border-gray-200 sm:px-6 text-center">
+    <h1 class="font-semibolsd text-3xl">COVID-19 CONTROL CELL</h1>
+    <h2 class="font-semisbold text-2xl">TELEMEDICINE – COMMUNITY PHARMACY</h2>
+    <h3 class="text-3xl font-semibold  leading-6 text-gray-900 mt-4">
+      PRESCRIPTION
+    </h3>
   </div>
   <div class="px-4 py-5 sm:px-6">
     <dl class="flex flex-row flex-wrap">
@@ -54,12 +49,13 @@
           <%= @prescription.contact.gender %>
         </dd>
       </div>
-      <div class="sm:col-span-2 mt-4">
-        <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
-          Prescription was created by
-          <span class="font-bold"><%= @prescription.creator.name %></span> on
-          <span class="text-sm"><%= @prescription.created_at.strftime("%m/%d/%Y at %I:%M%p") %></span>
-        </p>
+      <div class="w-1/3 mt-4">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Date
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <%= @prescription.created_at %>
+        </dd>
       </div>
     </dl>
     <%= render 'show_medicines', medicines: @prescription.medicines %>
@@ -72,31 +68,17 @@
           <%= @prescription.remarks %>
         </dd>
       </div>
-      <div class="sm:col-span-2 mt-4 w-1/3">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Comments
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900">
-          <%= @prescription.comments %>
-        </dd>
-      </div>
     </div>
     <div class="flex justify-between mt-4">
       <div class="w-1/3">
         <dt class="text-sm leading-5 font-medium text-gray-500">
-          Scheme
+          Prescribed By
         </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900">
-          <%= @prescription.scheme %>
+        <dd class="mt-1 text-sm leading-5 text-gray-900b font-bold">
+          <%= @prescription.creator.name %>
         </dd>
       </div>
-      <div class="w-1/3">
-        <dt class="text-sm leading-5 font-medium text-gray-500">
-          Supplier
-        </dt>
-        <dd class="mt-1 text-sm leading-5 text-gray-900">
-          <%= @prescription.supplier %>
-        </dd>
+      <div class="p-24">
       </div>
     </div>
   </div>
