Show error page for invalid prescriptions

--- a/app/views/verifications/prescription.html.erb
+++ b/app/views/verifications/prescription.html.erb
@@ -87,5 +87,15 @@
         </div>
       </div>
     </div>
+  <% else %>
+    <div class="px-4 py-3 border-b border-gray-200 sm:px-6 text-center">
+      <%= image_tag 'https://cdn.coronasafe.network/coronaSafeLogo.png', class: 'h-12 mx-auto' %>
+      <h2 class="font-semisbold text-2xl">TELEMEDICINE | COMMUNITY PHARMACY</h2>
+      <div class="-mt-2 font-semibold">telemedicine.coronasafe.network</div>
+      <div class="px-2 py-1 rounded mt-6 shadow bg-red-200 inline-flex border border-red-400 text-red-600 ">
+     Prescription Not Found
+      </div>
+    </div>
+
   <% end %>
 </div>
