--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -65,7 +65,7 @@
 <div class="mt-4">
   <%= simple_form_for :search, url: root_path, method: "GET" do |f| %>
 
-    <div class="flex">
+    <div class="md:flex">
       <%= f.input :start_date, label: 'From', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4', value: presenter.start_date.to_s }, as: :date, default: Date.today, required: false %>
       <%= f.input :end_date, label: 'To', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4', value: presenter.end_date.to_s }, as: :date, default: Date.today, required: false %>
       <%= f.input :assigned, label: 'Assigned', input_html: { class: 'flex form-select mr-4' }, selected: presenter.assigned_to_me, collection: ['Assigned to Me', 'Show All'], required: true %>
