--- a/app/views/verifications/prescription.html.erb
+++ b/app/views/verifications/prescription.html.erb
@@ -7,7 +7,10 @@
       </div>
     </div>
     <div class="px-4 py-3 border-b border-gray-200 sm:px-6 text-center">
-      <%= image_tag 'https://cdn.coronasafe.network/coronaSafeLogo.png', class: 'h-12 mx-auto' %>
+      <div class="flex justify-between">
+        <%= image_tag 'https://cdn.coronasafe.network/nhm.jpg', class: 'h-16' %>
+        <%= image_tag 'https://cdn.coronasafe.network/coronaSafeLogo.png', class: 'h-12 ' %>
+      </div>
       <h2 class="font-semisbold text-2xl">TELEMEDICINE | COMMUNITY PHARMACY</h2>
       <div class="-mt-2 font-semibold">telemedicine.coronasafe.network</div>
       <h3 class="text-3xl font-semibold  leading-6 text-gray-900 mt-4">
