Rework authorisation flow for adding new districts

--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -27,7 +27,7 @@
         <div class="flex md:flex-row flex-col justify-between">
           <div>
             <div class="text-3xl font-semibold">
-              #EKM <%= @contact.id %>
+              <%= @contact.uid %>
             </div>
             <div class="text-lg text-2xl font-medium text-gray-900">
               <%= @contact.name.titleize %>,
