--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="px-4 py-5 border-b border-gray-200 flex flex-col items-between justify-center  lg:flex-row lg:items-center lg:justify-between sm:px-6">
     <div>
       <h3 class="text-lg leading-6 font-medium text-gray-900">
-        EKM <%= @contact.id %> /
+        <%= @contact.uid %>/
         <%= @contact.name.titleize %>,
         <% if @contact.dob.present? %>
           <%= @contact.age_from_dob %> Years
