--- a/app/views/prescriptions/print.html.erb
+++ b/app/views/prescriptions/print.html.erb
@@ -19,7 +19,7 @@
           Reg No:
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
-          EKM<%= @prescription.contact.id %>        </dd>
+          <%= @prescription.contact.uid %> </dd>
       </div>
       <div class="w-1/3 mt-4">
         <dt class="text-sm leading-5 font-medium text-gray-500">
@@ -84,7 +84,7 @@
         </div>
 
         <div class="pt-4">
-          <div><span class="font-semibold">Printed At:</span>  <%= Time.zone.now %></div>
+          <div><span class="font-semibold">Printed At:</span> <%= Time.zone.now %></div>
           <div><span class="font-semibold">Printed by:</span> <%= current_user.name %></div>
         </div>
       </div>
